<resources>
    <string name="app_name">Panthor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_notLoggedIn">Not logged in</string>
    <string name="nav_loginInfo">Visit info.panthor.de</string>
    <string name="set_playerApiKey">Player API Key</string>
    <string name="str_placeholder">Placeholder</string>
    <string name="str_website">Website</string>
    <string name="str_twitter" translatable="false">Twitter</string>
    <string name="str_discord" translatable="false">Discord</string>
    <string name="str_changelog" translatable="false">Changelogs</string>
    <string name="str_imprint">Imprint &amp; Privacy</string>
    <string name="str_imprint_text">Panthor is a modded Arma 3 Roleplay server</string>
    <string name="str_overview">Overview</string>
    <string name="str_Servers">Servers</string>
    <string name="str_information">Information</string>
    <string name="str_vehicles">Vehicles</string>
    <string name="str_shops">Shops</string>
    <string name="str_licenses">Licenses</string>
    <string name="str_null" translatable="false">0</string>
    <string name="str_bank">Bank</string>
    <string name="str_cash">Cash</string>
    <string name="str_main_bank_acc">Main Account</string>
    <string name="str_other_bank_acc">Other Accounts</string>
    <string name="str_level">Level</string>
    <string name="str_skillpoint">Skillpoint(s)</string>
    <string name="str_forum">Forum</string>
    <string name="str_logged_in">Logged in as</string>
    <string name="str_player_info">Player Info</string>
    <string name="str_profilePicture">Profile Picture</string>
    <string name="str_pid" translatable="false">PID</string>
    <string name="str_close">close</string>
    <string name="str_expired">Expired</string>
    <string name="str_activated">Activated</string>
    <string name="str_stats">Stats</string>
    <string name="str_donations">Donations</string>
    <string name="str_unknown">Unknown</string>
    <string name="str_bronze">Bronze</string>
    <string name="str_silver">Silver</string>
    <string name="str_gold">Gold</string>
    <string name="str_platin">Platin</string>
    <string name="str_donation">Donation</string>
    <string name="str_deleted">Deleted</string>
    <string name="str_permanent">Permanent</string>
    <string name="str_days">Day(s)</string>
    <string name="str_lastSeen">Last seen</string>
    <string name="str_buildings">Buildings</string>
    <string name="str_next_restart">Next restart at</string>
    <string name="o_clock">o\'clock</string>
    <string name="str_cloud_dissconnect">Cloud disconnected</string>
    <string name="str_whoops" translatable="false">Whoops</string>
    <string name="sry_somethign_wrong">Looks like something went wrong.</string>
    <string name="str_no_msg">No Message</string>
    <string name="str_possible_solutions">Possible solutions</string>
    <string name="str_check_internet">1. Verify that you are connected to the internet.</string>
    <string name="str_verify_api">2. Check if you have entered your API Token in the settings.</string>
    <string name="str_view">View</string>
    <string name="str_error_occurred">An error occurred</string>
    <string name="str_crashReporting" translatable="false">Crash Reporting</string>
    <string name="str_info_crashReporting">Send Log when app crashes</string>
    <string name="str_qrScannerInfo">Scan code on info.panthor.de       For help check settings</string>
    <string name="str_crashlyticsEnabled">Thank you for sending crash data.</string>
    <string name="str_crashlyticsDisabled">Changes will be active after restart.</string>
    <string name="str_noApiTokenInfo">You need to scan/copy your API Token from info.panthor.de to use most of this app.</string>
    <string name="str_noApiToken">No API Token</string>
    <string name="str_communicate">Communicate</string>
    <string name="str_license_info">View License Info</string>
    <string name="str_playerslist">Players List</string>
    <string name="str_market">Market Prices</string>
    <string name="str_rechnertool">Calculator</string>
    <string name="str_server1">Server 1</string>
    <string name="str_server2">Server 2</string>
    <string name="str_server3">Server 3</string>
    <string name="str_medic">Medical Rescue Service</string>
    <string name="str_rac">Rheinfels Automobil Club</string>
    <string name="str_cop">Police</string>
    <string name="str_justiz">Justice</string>
    <string name="str_civ">Civilian</string>
    <string name="str_calc_vehicles">Vehicles</string>
    <string name="str_calc_guns">Guns</string>
    <string name="str_calc_sell">Sell items</string>
    <string name="str_calc_sum">Total</string>
    <string name="str_noRank">Kein Rang</string>
    <string name="str_judicial_officer">Justiz</string>
    <string name="str_cop0a">Polizeianwärter</string>
    <string name="str_cop01">Polizeiwachtmeister</string>
    <string name="str_cop02">Polizeimeister</string>
    <string name="str_cop03">Polizeiobermeister</string>
    <string name="str_cop04">Polizeihauptmeister</string>
    <string name="str_cop05">Polizeihauptmeister m.Z.</string>
    <string name="str_cop06">Polizeikommissaranwärter</string>
    <string name="str_cop07">Polizeikommissar</string>
    <string name="str_cop08">Polizeioberkommissar</string>
    <string name="str_cop09">Polizeihauptkommissar</string>
    <string name="str_cop10">Erster Polizeihauptkommissar</string>
    <string name="str_cop11">Polizeirat</string>
    <string name="str_cop12">Polizeioberrat</string>
    <string name="str_cop13">Polizeidirektor</string>
    <string name="str_cop14">Leitender Polizeidirektor</string>
    <string name="str_cop15">Polizeipräsident</string>
    <string name="str_med01">Sanitätshelfer</string>
    <string name="str_med02">Sanitäter</string>
    <string name="str_med03">Rettungshelfer</string>
    <string name="str_med04">Rettungssanitäter</string>
    <string name="str_med05">Rettungsassistent</string>
    <string name="str_med06">Notfallhelfer</string>
    <string name="str_med07">Notfallsanitäter i.A.</string>
    <string name="str_med08">Notfallsanitäter</string>
    <string name="str_med09">Medizinstudent</string>
    <string name="str_med10">Medizindoktorand</string>
    <string name="str_med11">Assistenzarzt</string>
    <string name="str_med12">Facharzt</string>
    <string name="str_med13">Oberarzt</string>
    <string name="str_med14">Leitender Oberarzt</string>
    <string name="str_med15">Chefarzt</string>
    <string name="str_med16">Ärztlicher Direktor</string>
    <string name="str_rac01">Auszubildender</string>
    <string name="str_rac02">Geselle</string>
    <string name="str_rac03">Mechaniker</string>
    <string name="str_rac04">Mechatroniker</string>
    <string name="str_rac05">Techniker</string>
    <string name="str_rac06">Meister</string>
    <string name="str_rac07">Ingenieur</string>
    <string name="str_rac08">Co. Leiter</string>
    <string name="str_rac09">Leiter</string>
    <string name="aluminum_r">Aluminum</string>
    <string name="apple">Apple</string>
    <string name="apple_juice">Apple juice</string>
    <string name="barley_r">Barley flour</string>
    <string name="barley_u">Barley</string>
    <string name="beer">Beer</string>
    <string name="bread">Bread</string>
    <string name="clay_r">Clay</string>
    <string name="coal_r">Coal</string>
    <string name="cocaine_r">Cocaine</string>
    <string name="copper_r">Copper</string>
    <string name="crab">Crab</string>
    <string name="diamond_r">Diamond</string>
    <string name="fish_r">Fish</string>
    <string name="heroin_r">Heroin</string>
    <string name="honey_r">Honey</string>
    <string name="iron_r">Iron</string>
    <string name="lsd">LSD</string>
    <string name="meat_r">Meat</string>
    <string name="oil_r">Oil</string>
    <string name="plastic">Plastic</string>
    <string name="potato">Potato</string>
    <string name="roll">Roll</string>
    <string name="rum">Rum</string>
    <string name="salt_r">Salt</string>
    <string name="sand_r">Glas</string>
    <string name="steel">Steel</string>
    <string name="sugar_r">Sugar</string>
    <string name="sugar_u">Sugar beet</string>
    <string name="tobacco_r">Tobacco</string>
    <string name="vodka">Vodka</string>
    <string name="weed_r">Weed</string>
    <string name="wheat_r">Wheat fluour</string>
    <string name="wheat_u">Wheat</string>
    <string name="wood_r">Wood</string>
    <string name="charcoal_r">Charcoal</string>
    <string name="cotton_r">Cotton</string>
    <string name="crab_rolls">Crab rolls </string>
    <string name="detergent">Detergent</string>
    <string name="furniture_r">Export furniture</string>
    <string name="grape_juice">Grape Juice</string>
    <string name="white_widow_r">White Widow (Dried)</string>
    <string name="white_russian_r">White Russian (Dried)</string>
    <string name="purple_haze_r">Purple Haze (Dried)</string>
    <string name="met">Met</string>
    <string name="moonshiner">Moonshine</string>
    <string name="precious_metal_r">Precious metal</string>
    <string name="rubber">Rubber</string>
    <string name="rye_r">Rye flour</string>
    <string name="tissue">Tissues</string>
    <string name="str_polDashboard">Dashboard Police Wiesberg</string>
    <string name="str_racDashsboard">Dashboard RAC</string>
    <string name="str_back_again_to_exit">Press BACK again to exit.</string>
    <string name="str_no_data_change_tab">No data.\n\nIf you expect data, please change the tab and then change back here again.</string>
    <string name="str_no_data">No data.</string>
    <string name="str_no_data_refresh">No data.\n\nIf you expect data, please refresh (swipe down).</string>
    <string name="str_days_maintenance">Reminder for Maintenance</string>
    <string name="str_days_maintenance_time_unit">Days</string>
    <string name="str_new_value">New value:</string>
    <string name="str_no_valid_number_days_maintenance">No valid number! Must between 0 and 20!</string>
    <string name="str_plate">Plate:</string>
    <string name="str_mileage">Mileage:</string>
    <string name="str_veh_sold">sold</string>
    <string name="str_veh_impound">impounded</string>
    <string name="str_veh_disabled">destroyed</string>
    <string name="str_last_garage">Garage:</string>
    <string name="str_apiSettings">API Settings</string>
    <string name="str_firebaseSettings">Firebase Settings</string>
    <string name="str_api_token">API Token</string>
    <string name="str_scan">Scan QR Code</string>
    <string name="str_helpScan">Help scanning Code</string>
    <string name="str_vehiclesListSettings">Vehicle List Settings</string>
    <string name="str_dont_show">Do not show</string>
    <string name="str_show">Show</string>
    <string name="str_vehicleList_sold">sold vehicles</string>
    <string name="str_vehicleList_destroyed">Destroyed vehicles</string>
    <string name="str_vehicleList_impound">Impounded vehicles</string>
    <string name="str_buildingsList_buildingPayedFor">Payed for {0} day(s).</string>
    <string name="str_setReminder">Remind me of maintenance</string>
    <string name="str_house">Houses</string>
    <string name="str_rental">Rentals</string>
    <string name="str_building">Construction sites</string>
    <string name="str_maintainance_house">Maintained {0} with id {1} for {2} days ({3} hours).</string>
    <string name="str_maintainance_rental">Payed {0} with id {1} for {2} days ({3} hours).</string>
    <string name="str_inactive"> - inactive</string>
    <string name="str_remind_me">Set reminder</string>
    <string name="str_alarms_set">Reminders set</string>
</resources>