<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/str_apiSettings"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:id="@+id/pref_api_token"
            android:icon="@drawable/ic_lock_open"
            android:inputType="textPassword"
            android:key="api_token"
            android:summary="Player API Token"
            android:title="@string/str_api_token"
            app:iconSpaceReserved="false" />
        <Preference
            android:id="@+id/pref_scan_code"
            android:icon="@drawable/ic_linked_camera"
            android:key="scan_code"
            android:title="@string/str_scan" />
        <Preference
            android:id="@+id/pref_scan_code_help"
            android:icon="@drawable/ic_info_filled"
            android:key="scan_code_help"
            android:title="@string/str_helpScan" />
        <EditTextPreference
            android:id="@+id/pref_days_maintenance"
            android:defaultValue=""
            android:icon="@drawable/ic_location_city"
            android:key="pref_days_maintenance"
            android:title="@string/str_days_maintenance" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/str_vehiclesListSettings"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:id="@+id/pref_vehicleList_destroyed"
            android:key="pref_vehicleList_destroyed"
            android:summaryOff="@string/str_dont_show"
            android:summaryOn="@string/str_show"
            android:title="@string/str_vehicleList_destroyed"
            app:iconSpaceReserved="false" />
        />
        <SwitchPreference
            android:id="@+id/pref_vehicleList_impounded"
            android:key="pref_vehicleList_impounded"
            android:summaryOff="@string/str_dont_show"
            android:summaryOn="@string/str_show"
            android:title="@string/str_vehicleList_impound"
            app:iconSpaceReserved="false" />
        />

    </PreferenceCategory>

</PreferenceScreen>